(http) Re-implement tests using Java 11 HTTP client
groovyx.HttpBuilder is broken.